working on spacing issues in db from textarea input fields.

--- a/public/css/profile/app.css
+++ b/public/css/profile/app.css
@@ -52,4 +52,11 @@ li {
   list-style-type: none;
   margin: 0;
   padding: 0;
+  color: orange;
+  font-size: 25px;
+  text-shadow: 4px 4px 6px black;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
 }
